--- a/styles/Button.module.scss
+++ b/styles/Button.module.scss
@@ -1,14 +1,13 @@
 .btn {
   width: 100%;
-  padding: 12px;
+ // padding: 12px;
   border-radius: 100px;
   background: #000;
   color: white;
   text-align: center;
   border: none;
+  border: 1px gray solid;
   transition: all 0.2s ease;
   margin: 20px 0;
-  &:hover {
-    opacity: 0.6;
-  }
+  height: 40px;
 }
