--- a/styles/Story.module.scss
+++ b/styles/Story.module.scss
@@ -15,6 +15,12 @@
 
 .title {
   font-size: 1.2em;
+  text-transform: capitalize;
+}
+
+.name {
+  font-size: .9em;
+  color: gray;
 }
 
 .stats_wrapper {
@@ -27,19 +33,17 @@
 .stat {
   @include flex;
   flex-direction: row;
-  * {
-    font-size: 1.2em;
-  }
 }
 
 .icon {
+  font-size: .8em;
   margin-right: 10px;
 }
 
 #like_icon {
-  color: #007cff;
   transition: all 0.3s ease;
-  &:hover {
-    color: red;
-  }
+}
+
+.likers {
+  font-size: .9em;
 }
