--- a/styles/Story.module.scss
+++ b/styles/Story.module.scss
@@ -4,13 +4,17 @@
 .story {
   padding: 20px;
   margin-top: 20px;
-  border: 1px solid gray;
   border-radius: 20px;
-  //  box-shadow: 0 8px 15px 0 rgba(31, 38, 135, 0.37);
+  box-shadow: 0 8px 15px 0 rgba(31, 38, 135, 0.37);
 }
 
 .wrapper {
   width: min(350px, 400px);
+}
+
+.story {
+  border: 1px solid gray;
+  box-shadow: none;
 }
 
 .title {
