--- a/styles/Input.module.scss
+++ b/styles/Input.module.scss
@@ -2,11 +2,12 @@
   margin-top: 5px;
   padding: 12px;
   border-radius: 100px;
-  border: none;
-  border: 2px black solid;
+  outline: none;
+  border: 2px gray solid;
   width: 100%;
   transition: all 0.3s ease-in-out ;
   &:hover {
+    outline: none;
     border: 2px red solid;
   }
 }
