--- a/styles/StoryPage.module.scss
+++ b/styles/StoryPage.module.scss
@@ -47,6 +47,9 @@
 }
 
 .comment_wrapper {
+  padding: 10px;
+  border: 1px solid gray;
+  border-radius: 20px;
   width: 100%;
   margin-top: 100px;
 }
