--- a/styles/StoryPage.module.scss
+++ b/styles/StoryPage.module.scss
@@ -21,9 +21,7 @@
 
 .content {
   width: 100%;
-  border: 1px solid gray;
-  border-radius: 10px;
-  padding: 20px;
+  
   line-height: 2;
 }
 
@@ -52,4 +50,16 @@
   border-radius: 20px;
   width: 100%;
   margin-top: 100px;
+}
+
+.reaction {
+  @include flex;
+  border: 1px gray solid;
+  width: 100%;
+  padding: 12px;
+  border-radius: 10px;
+  &:hover {
+    background: #000;
+    color: white;
+  }
 }
