--- a/styles/StoryPage.module.scss
+++ b/styles/StoryPage.module.scss
@@ -25,6 +25,12 @@
   line-height: 2;
 }
 
+.stats_wrapper {
+  @include flex;
+  flex-direction: row;
+  justify-content: space-between
+}
+
 .reactions {
   @include flex;
   flex-direction: row;
