--- a/styles/StoryPage.module.scss
+++ b/styles/StoryPage.module.scss
@@ -78,10 +78,13 @@
   transition: all .3s ease-in-out;
 }
 
+.comment_container {
+  margin-top: 50px;
+}
 
 .comment_wrapper {
   padding: 10px 0;
   border-radius: 20px;
   width: 100%;
-  margin-top: 50px;
+  margin-top: 100px;
 }
