--- a/styles/Comment.module.scss
+++ b/styles/Comment.module.scss
@@ -1,7 +1,7 @@
-@import './Mixin.module.scss';
+@import "./Mixin.module.scss";
 
 .comment {
-  border: 1px solid gray ;
+  border: 1px solid gray;
   border-radius: 8px;
   padding: 10px;
   margin-top: 25px;
@@ -13,7 +13,7 @@
 }
 
 .commenter_details {
-  border-bottom: 1px gray solid ;
+  border-bottom: 1px gray solid;
 }
 
 .commenter_name_wrapper {
@@ -30,11 +30,11 @@
 .time {
   color: gray;
   text-transform: capitalize;
-  font-size: 1.1em;
+  font-size: 1em;
 }
 
 .time {
-  font-size: .95em;
+  font-size: 0.95em;
 }
 
 .comment_title {
@@ -44,7 +44,7 @@
 .comment_body {
   padding-left: 10px;
   font-size: 1.2em;
-  border-left: 5px solid #000 ;
+  border-left: 5px solid #000;
 }
 
 .reactions_wrapper {
@@ -58,15 +58,20 @@
 
 .input_wrapper {
   flex-basis: 100%;
+  &:hover {
+    ~ .likes_wrapper {
+      display: none;
+    }
+  }
 }
 
 .likes_wrapper {
   flex-basis: 50%;
   @include flex;
   flex-direction: row;
-  border-left: 1px solid gray ;
+  border-left: 1px solid gray;
   padding-bottom: 4px;
-  border-bottom: 1px gray solid ;
+  border-bottom: 1px gray solid;
 }
 
 .reply_input {
