--- a/styles/Signup.module.scss
+++ b/styles/Signup.module.scss
@@ -1,5 +1,5 @@
 @import './Form.module.scss';
-
+@import './Mixin.module.scss';
 .container {
   display: flex;
   flex-direction: column;
@@ -7,6 +7,8 @@
   align-items: center;
   width: min(90%, 80rem);
   position: relative;
+  min-height: 100vh;
+  padding: 200px 0;
 }
 .wrapper {
   max-width: 500px;
@@ -43,4 +45,10 @@
   &:hover {
     color: blue;
   }
+}
+
+.btn_wrapper {
+  @include flex;
+  width: 100%;
+  margin: 20px 0;
 }
