--- a/styles/WritePost.module.scss
+++ b/styles/WritePost.module.scss
@@ -1,10 +1,12 @@
 .write_post {
+  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   Justify-content: center;
   align-items: center;
   position: relative;
+  padding: 200px 0;
 }
 
 .container {
