--- a/styles/Reply.module.scss
+++ b/styles/Reply.module.scss
@@ -1,5 +1,5 @@
 @import './Mixin.module.scss';
-@import './Comment.module.scss';
+//@import './Comment.module.scss';
 
 .reply {
   padding-left: 10px;
