--- a/styles/UserPost.module.scss
+++ b/styles/UserPost.module.scss
@@ -1,4 +1,5 @@
 @import './Mixin.module.scss';
+
 .container {
   @include flex;
   width: min(90%, 80rem);
@@ -9,24 +10,44 @@
 }
 
 .wrapper {
-  padding: 20px;
+  @include flex;
+  border-top: 1px solid lightgray;
+  width: min(350px, 80rem);
+}
+
+.post_time_wrapper {
   width: 100%;
-  border-top: 1px solid gray;
+  margin: 0;
+}
+
+.post_time {
+  font-size: .8em;
+  color: gray;
+}
+
+.content_wrapper {
+  margin-top: -20px;
+  width: 100%;
+  @include flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .post_title {
-  font-size: 1.3em;
+  font-size: 1.1em;
   font-weight: bold;
+  text-align: left;
+  text-transform: capitalize;
 }
 
 .reactions_wrapper {
-  width: 100%;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   padding: 10px;
-  border-top: 1px lightgray solid;
-  margin-top: 20px;
+  * + * {
+    margin-left: 20px;
+  }
 }
 
 .reaction_wrapper {
@@ -39,8 +60,11 @@
 }
 
 .post_likes {
-  font-size: 1.19em;
+  font-size: .8em;
   line-height: 0;
 }
 
-.icon {}
+.icon {
+  color: gray ;
+  font-size: .8em;
+}
