--- a/styles/UserPost.module.scss
+++ b/styles/UserPost.module.scss
@@ -7,6 +7,7 @@
 
 .user_post {
   @include flex;
+  //position: relative;
 }
 
 .wrapper {
@@ -67,4 +68,47 @@
 .icon {
   color: gray ;
   font-size: .8em;
+}
+
+.prompt_wrapper {
+  @include flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(255,255,255, 0.2);
+  backdrop-filter: blur(6.5px);
+}
+
+.delete_prompt {
+  padding: 40px 20px;
+  background: #fff;
+  box-shadow: 3px 3px 8px 2px rgb(0,0,0,0.2);
+  border-radius: 10px;
+  @include flex;
+  margin-top: -80px;
+  z-index: 100;
+  p {
+    color: red;
+    text-align: center;
+    margin: 2px;
+  }
+}
+
+.btn_wrapper {
+  @include flex_row;
+  * + * {
+    margin-left: 20px;
+  }
+}
+
+.btn {
+  @include flex;
+  border: none;
+  padding: 8px 20px;
+  background: #000;
+  color: #fff;
+  box-shadow: 3px 3px 8px 2px rgb(0,0,0,0.2);
+  border-radius: 100px;
 }
