--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,18 @@
+@import './Mixin.module.scss';
+
+.home {
+  min-height: 100vh;
+  width: 100%;
+  @include flex;
+  padding: 100px 0;
+}
+
+.container {
+  @include flex;
+  justify-content: flex-start;
+  width: min(90%, 80rem);
+  min-height: 100vh;
+}
 
 .close_icon {
   position: absolute;
@@ -5,4 +20,30 @@
   right: -5px;
   border: 1px solid rgba(0,0,0,0.09);
   padding: 5px;
+}
+
+.category_wrapper {
+  width: min(350px, 80rem);
+  @include flex_row;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px;
+  border: 1px gray solid;
+  border-radius: 10px;
+}
+
+.category {
+  margin-right: 20px;
+  line-height: .001;
+}
+
+.stories_heading_wrapper {
+  margin-top: 80px;
+  @include flex;
+  width: 100%;
+}
+
+.stories_wrapper {
+  border: 1px gray solid;
+  border-radius: 10px;
 }
