--- a/styles/Story.module.scss
+++ b/styles/Story.module.scss
@@ -2,19 +2,24 @@
 
 .wrapper,
 .story {
-  padding: 20px;
-  margin-top: 20px;
-  border-radius: 20px;
-  box-shadow: 0 8px 15px 0 rgba(31, 38, 135, 0.37);
+  padding: 0 10px;
+  margin-top: 10px;
+  border-radius: 10px;
+  // box-shadow: 0 8px 15px 0 rgba(31, 38, 135, 0.37);
 }
 
 .wrapper {
   width: min(350px, 400px);
+  &:not(:first-child) {
+    border-top: 1px gray solid;
+  }
 }
 
 .story {
+  padding: 10px;
   border: 1px solid gray;
   box-shadow: none;
+  margin-top: 20px;
 }
 
 .title {
@@ -23,6 +28,7 @@
 }
 
 .name {
+  margin-top: -10px;
   font-size: .9em;
   color: gray;
 }
@@ -32,6 +38,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 10px;
+  margin-top: -10px;
 }
 
 .stat {
