--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,6 @@
 html,
 body {
-  letter-spacing: .8pt;
-  line-height: 1.3;
+  background: rgb(241,241,241);
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -13,7 +12,7 @@ body {
 }
 
 a {
-  color: inherit;
+  color: teal;
   text-decoration: none;
 }
 
