--- a/styles/Toast.module.scss
+++ b/styles/Toast.module.scss
@@ -3,8 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  top: -150px;
+  position: fixed;
 }
 
 .container {
@@ -17,11 +16,12 @@
   align-items: center;
   margin: 20px 0;
   padding: 10px 30px;
-  border: 1px solid rgba(0, 0, 0, 0.7)
+  border: 1px solid red
 }
 
 .message {
   text-transform: lowercase;
   margin-left: 8px;
   font-size: .8em;
+  color: red;
 }
