--- a/styles/dashboard.module.scss
+++ b/styles/dashboard.module.scss
@@ -5,7 +5,7 @@
   min-height: 100vh;
   @include flex;
   justify-content: flex-start;
-  padding: 100px 0;
+  padding: 50px 0;
 }
 
 .container {
@@ -26,32 +26,12 @@
   }
 }
 
-.prompt {
-  margin-top: -17px;
-  margin-bottom: 50px;
-}
-
-.prompt_link {
-  color: teal;
-  text-transform: capitalize;
-
-}
-
-.clock {
-  @include flex;
-  flex-direction: row;
-}
-
-.time {
-  margin-left: 20px;
-  color: red;
-}
-
 .dash_menu {
   width: 100%;
   margin-left: -20px;
   @include flex_row;
-  margin-bottom: 30px; > * + * {
+  margin-bottom: 30px; 
+  * + * {
     margin-left: 20px;
   }
 }
