--- a/styles/WritePost.module.scss
+++ b/styles/WritePost.module.scss
@@ -8,7 +8,7 @@
   Justify-content: flex-start;
   align-items: center;
   position: relative;
-  padding-top: 50px;
+  padding: 100px 0;
 }
 
 .container {
