--- a/styles/Button.module.scss
+++ b/styles/Button.module.scss
@@ -3,11 +3,11 @@
  // padding: 12px;
   border-radius: 100px;
   background: #000;
-  color: white;
+  color: #fff;
   text-align: center;
   border: none;
   border: 1px gray solid;
   transition: all 0.2s ease;
-  margin: 20px 0;
+  margin-top: 20px;
   height: 40px;
 }
