--- a/styles/Signup.module.scss
+++ b/styles/Signup.module.scss
@@ -1,21 +1,43 @@
 @import './Form.module.scss';
 @import './Mixin.module.scss';
-.container {
+
+.login {
+  @include flex;
+  background: rgba( 255, 255, 255, 0.15 );
+  backdrop-filter: blur( 5.5px );
+  -webkit-backdrop-filter: blur( 5.5px );
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  width: min(90%, 80rem);
-  position: relative;
-  min-height: 100vh;
-  padding: 200px 0;
+  width: 100vw;
+  height: 100vh;
 }
 .wrapper {
+  background: #fff;
+  padding: 30px;
+  border-radius: 10px;
   max-width: 500px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  position: relative;
+  box-shadow: 3px 3px 8px 2px rgb(0,0,0,0.2);
+  z-index: 100;
+  &::after {
+    content: '';
+    position: absolute;
+    left: -5px;
+    top: -5px;
+    height: 100%;
+    width: 100%;
+    border: 1px gray solid;
+    border-radius: 10px;
+    z-index: -1;
+  }
 }
 
 .form {
