--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -41,11 +41,20 @@
   margin-left: 20px;
 }
 
-.avatar_wrapper {
+.icon_wrapper {
   @include flex;
-  border: 2px solid #000;
+//  border: 2px solid #000;
   height: 30px;
   width: 30px;
   border-radius: 100%;
   //box-shadow: 3px 3px 8px 0px rgb(0,0,0,0.2);
+}
+
+.icon {
+  font-size: 1.2em;
+  color: black;
+  transition: all 0.3s;
+  &:hover {
+    color: teal;
+  }
 }
