--- a/styles/Loading.module.scss
+++ b/styles/Loading.module.scss
@@ -1,6 +1,6 @@
 .container {
   height: 100vh;
-  position: absolute;
+  position: fixed;
   inset: 0;
   display: flex;
   justify-content: center;
