--- a/styles/MenuItem.module.scss
+++ b/styles/MenuItem.module.scss
@@ -2,8 +2,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+      &:hover {
+      animation: menu-hover 0.63s ease-in-out;
+    }
+     @keyframes menu-hover {
+        0% {
+          opacity: 1;
+        }
+        25% {
+          opacity: 0;
+        }
+        50% {
+          opacity: 1;
+        }
+        75% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
+     } 
   span {
-    display: none;
-    margin-top: 12px;
-  }
+    margin-top: 2px;
+    font-size: .8em;
+  } 
 }
