--- a/styles/Menu.module.scss
+++ b/styles/Menu.module.scss
@@ -3,39 +3,26 @@
   position: fixed;
   left: 0;
   bottom: 0;
-  background: lightgray ;
+  background: #fff ;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 30px;
+  padding: 5px 30px;
   transition: all 0.3s ;
   z-index: 100;
+  box-shadow: 3px 3px 8px 2px rgb(0,0,0,0.2);
 }
 
 .icon {
   font-size: 1.5rem;
 }
 
-#write_menu_item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100px;
-  height: 100px;
-  background: #000;
-  border: 10px solid #fff;
-  border-radius: 100%;
-  position: absolute;
-  top: -50px;
-  left: calc(50% - 50px);
-  transition: all 0.3s ease;
-  &:hover {
-    background: #454545;
-    transform: rotate(-45deg); 
-  }
-  .icon {
-    font-size: 2.5rem;
-    color: #fff;
-  }
+.write_icon_wrapper {
+  padding: 8px 20px;
+  background: gray;
+  border-radius: 10px;
+ .icon {
+   color: #fff;
+   transform: rotate(45deg);
+ }
 }
