--- a/styles/Story.module.scss
+++ b/styles/Story.module.scss
@@ -69,7 +69,8 @@
 }
 
 .name {
-  margin-top: -15px;
+  display: block;
+  margin-top: -10px;
   font-size: .9em;
   color: gray;
   text-align: center;
